set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/Console.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugHud.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SystemMessageBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SystemUI.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/Console.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugHud.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SystemMessageBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SystemUI.cpp
)

install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/SystemUI )

if(UNIT_TESTING)
endif()

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} ImGui PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)
