set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/BorderImage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Button.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CheckBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Cursor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DropDownList.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FileSelector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFaceBitmap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFaceFreeType.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFace.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Font.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LineEdit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ListView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Menu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/MessageBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ScrollBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ScrollView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Slider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Sprite.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Text3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Text.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ToolTip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/UIBatch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/UIComponent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/UIElement.h
    ${CMAKE_CURRENT_SOURCE_DIR}/UIEvents.h
    ${CMAKE_CURRENT_SOURCE_DIR}/UI.h
    ${CMAKE_CURRENT_SOURCE_DIR}/View3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Window.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Console.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugHud.h
)
set(UI_COMPONENTS
    ${CMAKE_CURRENT_SOURCE_DIR}/Console.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugHud.cpp
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/BorderImage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Button.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CheckBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cursor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DropDownList.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FileSelector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Font.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFaceBitmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FontFaceFreeType.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LineEdit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ListView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Menu.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MessageBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScrollBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ScrollView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Slider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Sprite.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Text3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ToolTip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UIComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UIBatch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UIElement.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UIEvents.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/View3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp
)

if(LUTEFISK3D_2DLESS)
    message(ERROR "UI requires 2D rendering support")
    return()
endif()
install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/UI )

if(UNIT_TESTING)
endif()
set(Lutefisk3D_INCLUDE_DIRS ${Lutefisk3D_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/Source/ThirdParty/FreeType/include PARENT_SCOPE)
set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} FreeType PARENT_SCOPE)
#set(Lutefisk3D_DEPENDENCIES ${Lutefisk3D_DEPENDENCIES} rapidjson PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} ${UI_COMPONENTS} PARENT_SCOPE)
